--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,21 @@
     "require-dev": {
         "adlawson/vfs": "~0.12.1",
         "camspiers/json-pretty": "~1.0.2",
+        "codeception/codeception": "4.0.2",
         "monolog/monolog": "~1.21.0",
         "php-http/curl-client": "~1.7.0",
-        "woohoolabs/yang": "2.3.2",
-        "codeception/codeception": "~4.1.21",
-        "codeception/module-asserts": "^1.3"
+        "phpunit/phpunit": "6.5.14",
+        "woohoolabs/yang": "~0.9.0",
+        "codeception/module-phpbrowser": "^1.0",
+        "codeception/module-asserts": "^1.1"
     },
     "require": {
         "php": "^7.2",
         "guzzlehttp/psr7": "~1.4.2",
-        "neomerx/json-api": "4.0.1",
+        "neomerx/json-api": "~1.0.9",
+        "slim/slim": "~3.12.3",
         "spomky-labs/otphp": "^8.3.3",
-        "tuupola/cors-middleware": "1.2.1",
+        "tuupola/cors-middleware": "~0.5.2",
         "tecnickcom/tcpdf": "^6.3",
         "scssphp/scssphp": "^1.4",
         "symfony/yaml": "^3.4",
@@ -45,6 +48,7 @@
         "opis/json-schema": "^1.0",
         "slim/psr7": "1.4",
         "slim/slim": "4.7.1",
-        "php-di/php-di": "6.3.4"
+        "php-di/php-di": "6.3.4",
+        "league/oauth2-client": "^2.6"
     }
 }
