--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "slim/slim": "4.7.1",
         "php-di/php-di": "6.3.4",
         "symfony/console": "5.3.6",
-        "symfony/process": "^5.4"
+        "symfony/process": "^5.4",
+        "jumbojett/openid-connect-php": "^0.9.2"
     }
 }
