--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "portal-vue": "^2.1.7",
         "postcss": "^8.1.8",
         "postcss-loader": "4.1.0",
+        "sanitize-html": "^2.7.0",
         "sass": "^1.29.0",
         "sass-loader": "^10.1.0",
         "select2": "4.0.13",
