--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Stud.IP",
     "private": true,
     "scripts": {
+        "lint": "eslint resources/assets/javascripts resources/vue",
         "wds": "webpack serve --progress --config webpack.dev-server.js",
         "webpack-dev": "webpack --config webpack.dev.js --mode development",
         "webpack-prod": "webpack --config webpack.prod.js --mode production",
@@ -19,7 +20,8 @@
         "node": ">=12"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.3",
+        "@babel/core": "^7.17.9",
+        "@babel/eslint-parser": "^7.17.0",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/plugin-transform-runtime": "^7.12.1",
         "@babel/preset-env": "^7.12.1",
@@ -45,8 +47,9 @@
         "css-minimizer-webpack-plugin": "^1.1.5",
         "easygettext": "^2.17.0",
         "es6-promise": "4.2.8",
-        "eslint": "7.21.0",
+        "eslint": "^7.32.0",
         "eslint-plugin-vue": "7.7.0",
+        "eslint-webpack-plugin": "^3.1.1",
         "expose-loader": "1.0.1",
         "favico.js": "0.3.10",
         "file-saver": "^2.0.5",
@@ -113,15 +116,6 @@
         "last 2 versions",
         "not IE <= 11"
     ],
-    "eslintConfig": {
-        "env": {
-            "browser": true
-        },
-        "parserOptions": {
-            "ecmaVersion": 6,
-            "sourceType": "module"
-        }
-    },
     "prettier": {
         "printWidth": 120,
         "singleQuote": true,
