--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
         "jquery-ui-touch-punch": "0.2.3",
         "jquery.qrcode": "^1.0.3",
         "jquery.scrollto": "2.1.2",
-        "jspdf-yworks": "^2.1.1",
+        "jspdf": "^2.5.1",
         "jszip": "^3.6.0",
         "less": "^3.12.2",
         "less-loader": "7.1.0",
