Update .gitlab-ci.yml fix release-building

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,9 @@ variables:
 
 stages:
   - Checks
+  - Tests
   - Packaging
   - Release
-  - Tests
   - Build
 
 Linting:
@@ -79,8 +79,7 @@ Packaging:
   rules:
     - if: $CI_COMMIT_TAG
   before_script:
-    - echo $CI_JOB_ID
-    - echo GE_JOB_NAME=$CI_JOB_NAME >> .packaging.env
+    - echo GE_JOB_ID=$CI_JOB_ID >> .packaging.env
     - mkdir .pkg
   script:
     - echo 'Running packaging job'
@@ -101,8 +100,6 @@ Release:
   image: studip/release-cli
   rules:
     - if: $CI_COMMIT_TAG
-  variables:
-    SETTINGS__GITLAB_ACCESS_TOKEN: $GITLAB_ACCESS_TOKEN
   script:
     - echo 'Running release job'
   needs:
@@ -115,8 +112,8 @@ Release:
     assets:
       links:
         - name: "Stud.IP-Release-$CI_COMMIT_TAG.zip"
-          url: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/artifacts/${CI_COMMIT_TAG}/raw/.pkg/studip-release.zip?job=${GE_JOB_NAME}"
+          url: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${GE_JOB_ID}/artifacts/.pkg/studip-release-$CI_COMMIT_TAG.zip"
           link_type: package
         - name: "Stud.IP-Release-$CI_COMMIT_TAG.tar.gz"
-          url: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/artifacts/${CI_COMMIT_TAG}/raw/.pkg/studip-release.tar.gz?job=${GE_JOB_NAME}"
+          url: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${GE_JOB_ID}/artifacts/.pkg/studip-release-$CI_COMMIT_TAG.tar.gz"
           link_type: package
