--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
         "vrp-vue-resizable": "1.2.7",
         "vue": "^2.6.12",
         "vue-gettext": "^2.1.12",
-        "vue-loader": "^15.9.6",
+        "vue-loader": "^15.9.8",
         "vue-router": "^3.5.1",
         "vue-select": "^3.11.2",
         "vue-template-babel-compiler": "^1.2.0",
@@ -97,9 +97,9 @@
         "vue-typer": "^1.2.0",
         "vuedraggable": "^2.24.3",
         "vuex": "^3.6.2",
-        "webpack": "5.6.0",
-        "webpack-cli": "4.2.0",
-        "webpack-dev-server": "3.11.0",
+        "webpack": "5.61",
+        "webpack-cli": "^4.7.0",
+        "webpack-dev-server": "4.4.0",
         "webpack-merge": "5.4.0"
     },
     "babel": {
