--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "woohoolabs/yang": "2.3.2",
         "codeception/codeception": "~4.1.21",
         "codeception/module-asserts": "^1.3",
-        "overtrue/phplint": "^3.0"
+        "overtrue/phplint": "^3.0",
+        "phpstan/phpstan": "^1.7"
     },
     "require": {
         "php": "^7.2",
