--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "ext-pcre": "*",
         "ext-pdo": "*",
         "ext-mbstring": "*",
+        "ext-dom": "*",
         "opis/json-schema": "^1.0",
         "slim/psr7": "1.4",
         "slim/slim": "4.7.1",
