--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -5,12 +5,15 @@ parameters:
         # - app/routes
         - lib
         # - tests
+    scanFiles:
+        - composer/phpxmlrpc/phpxmlrpc/lib/xmlrpc.inc
     scanDirectories:
         - app/controllers
         - lib
         - vendor
     excludePaths:
         - lib/classes/ZipArchiveLegacyTrait.php
+        - lib/elearning/studip_referrer.php
         - lib/soap/StudipSoapClient_PHP5.class.php
     tmpDir: .caches
     earlyTerminatingMethodCalls:
@@ -20,4 +23,4 @@ parameters:
     errorFormat:
        junit
     ignoreErrors:
-        - '#Undefined variable#'
+        # - '#Undefined variable#'
