fix errors in tests, fixes #1309
Closes #1309

Merge request studip/studip!805

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -4,7 +4,9 @@ parameters:
     paths:
         - app/routes
         - lib
-        # - tests
+        - tests/functional
+        - tests/jsonapi
+        - tests/unit
     scanFiles:
         - composer/phpxmlrpc/phpxmlrpc/lib/xmlrpc.inc
     scanDirectories:
