--- a/package.json
+++ b/package.json
@@ -27,6 +27,32 @@
         "@babel/plugin-transform-runtime": "^7.12.1",
         "@babel/preset-env": "^7.12.1",
         "@babel/register": "^7.12.1",
+        "@ckeditor/ckeditor5-alignment": "32.0.0",
+        "@ckeditor/ckeditor5-autoformat": "32.0.0",
+        "@ckeditor/ckeditor5-basic-styles": "32.0.0",
+        "@ckeditor/ckeditor5-build-classic": "32.0.0",
+        "@ckeditor/ckeditor5-build-decoupled-document": "32.0.0",
+        "@ckeditor/ckeditor5-build-inline": "32.0.0",
+        "@ckeditor/ckeditor5-code-block": "32.0.0",
+        "@ckeditor/ckeditor5-dev-utils": "^28.1.1",
+        "@ckeditor/ckeditor5-dev-webpack-plugin": "^28.1.1",
+        "@ckeditor/ckeditor5-essentials": "32.0.0",
+        "@ckeditor/ckeditor5-find-and-replace": "32.0.0",
+        "@ckeditor/ckeditor5-font": "32.0.0",
+        "@ckeditor/ckeditor5-horizontal-line": "32.0.0",
+        "@ckeditor/ckeditor5-html-support": "32.0.0",
+        "@ckeditor/ckeditor5-indent": "32.0.0",
+        "ckeditor5-math": "32.0.0",
+        "@ckeditor/ckeditor5-paragraph": "32.0.0",
+        "@ckeditor/ckeditor5-remove-format": "32.0.0",
+        "@ckeditor/ckeditor5-select-all": "32.0.0",
+        "@ckeditor/ckeditor5-source-editing": "32.0.0",
+        "@ckeditor/ckeditor5-special-characters": "32.0.0",
+        "@ckeditor/ckeditor5-table": "32.0.0",
+        "@ckeditor/ckeditor5-theme-lark": "32.0.0",
+        "@ckeditor/ckeditor5-typing": "32.0.0",
+        "@ckeditor/ckeditor5-upload": "32.0.0",
+        "@ckeditor/ckeditor5-vue2": "^1.0.5",
         "@elan-ev/reststate-vuex": "~1.0.5",
         "@fullcalendar/core": "^4.3.1",
         "@fullcalendar/daygrid": "^4.3.0",
@@ -79,6 +105,7 @@
         "postcss-less": "^6.0.0",
         "postcss-loader": "4.1.0",
         "postcss-scss": "^4.0.4",
+        "raw-loader": "^4.0.2",
         "sanitize-html": "^2.7.0",
         "sass": "^1.29.0",
         "sass-loader": "^10.1.0",
@@ -104,9 +131,9 @@
         "vue-typer": "^1.2.0",
         "vuedraggable": "^2.24.3",
         "vuex": "^3.6.2",
-        "webpack": "5.61",
-        "webpack-cli": "^4.7.0",
-        "webpack-dev-server": "4.4.0",
+        "webpack": "^5.70.0",
+        "webpack-cli": "4.2.0",
+        "webpack-dev-server": "3.11.0",
         "webpack-merge": "5.4.0"
     },
     "babel": {
