--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
         "@ckeditor/ckeditor5-horizontal-line": "32.0.0",
         "@ckeditor/ckeditor5-html-support": "32.0.0",
         "@ckeditor/ckeditor5-indent": "32.0.0",
-        "ckeditor5-math": "32.0.0",
         "@ckeditor/ckeditor5-paragraph": "32.0.0",
         "@ckeditor/ckeditor5-remove-format": "32.0.0",
         "@ckeditor/ckeditor5-select-all": "32.0.0",
@@ -69,6 +68,7 @@
         "buffer": "^6.0.3",
         "chart.js": "^2.9.4",
         "chartist": "0.11.4",
+        "ckeditor5-math": "32.0.0",
         "cropperjs": "1.5.9",
         "css-loader": "^5.0.1",
         "css-minimizer-webpack-plugin": "^1.1.5",
@@ -132,8 +132,8 @@
         "vuedraggable": "^2.24.3",
         "vuex": "^3.6.2",
         "webpack": "^5.70.0",
-        "webpack-cli": "4.2.0",
-        "webpack-dev-server": "3.11.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.4.0",
         "webpack-merge": "5.4.0"
     },
     "babel": {
