--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "symfony/console": "~5.3.16",
         "symfony/process": "^5.4",
         "jumbojett/openid-connect-php": "^0.9.2",
-        "league/oauth2-server": "^8.3"
+        "league/oauth2-server": "^8.3",
+        "willdurand/negotiation": "^3.1"
     }
 }
