ensure that all libs from composer are compatible with php 7.2 and enforce 7.2 by settings config.platform.php to 7.2, fixes #1569
Closes #1569

Merge request studip/studip!1002

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "studip/core",
     "description": "Stud.IP ist ein Campus- und Lernmanagementsystem für Hochschulen, Schulen, Unternehmen, Verbände und Behörden.",
     "config": {
-        "vendor-dir": "composer"
+        "vendor-dir": "composer",
+        "platform": {
+            "php": "7.2"
+        }
     },
     "require-dev": {
         "adlawson/vfs": "~0.12.1",
