test assets creation as part of the pipeline, re #606
Merge request studip/studip!1036

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -195,6 +195,17 @@ test-jsonapi:
     reports:
       junit: tests/_output/report.xml
 
+test-assets:
+  stage: tests
+  needs: []
+  cache: *npm-cache
+  allow_failure: false
+  interruptible: true
+  before_script:
+    - make npm
+  script:
+    - make webpack-dev
+
 packaging:
   stage: packaging
   cache: []
