--- a/package.json
+++ b/package.json
@@ -134,7 +134,8 @@
         "webpack": "^5.70.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.4.0",
-        "webpack-merge": "5.4.0"
+        "webpack-merge": "5.4.0",
+        "webpack-notifier": "^1.15.0"
     },
     "babel": {
         "presets": [
