--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,16 @@
 {
-    "parser": "@babel/eslint-parser",
     "parserOptions": {
+        "parser": "@babel/eslint-parser",
         "sourceType": "module"
     },
     "env": {
         "browser": true,
         "es6": true
     },
-    "extends": "eslint:recommended",
+    "extends": [
+        "eslint:recommended",
+        "plugin:vue/essential"
+    ],
     "globals": {
         "STUDIP": "writable",
         "CKEDITOR": "writable",
@@ -15,6 +18,9 @@
         "_": "writable",
         "jQuery": "writable"
     },
+    "plugins": [
+        "vue"
+    ],
     "rules": {
         "no-unused-vars": "off",
 
