--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Stud.IP",
     "private": true,
     "scripts": {
-        "lint": "eslint resources/assets/javascripts resources/vue",
+        "lint": "eslint --ext .js,.vue resources/assets/javascripts resources/vue",
         "css-lint": "stylelint resources/assets/stylesheets",
         "webpack-dev": "webpack --config webpack.dev.js --mode development",
         "webpack-prod": "webpack --config webpack.prod.js --mode production",
