--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,16 @@
     "require-dev": {
         "adlawson/vfs": "~0.12.1",
         "camspiers/json-pretty": "~1.0.2",
-        "monolog/monolog": "~1.21.0",
         "php-http/curl-client": "~1.7.0",
         "woohoolabs/yang": "2.3.2",
-        "codeception/codeception": "~4.1.21",
+        "codeception/codeception": "^4.2",
         "codeception/module-asserts": "^1.3",
         "overtrue/phplint": "^3.0",
         "phpstan/phpstan": "^1.8"
     },
     "require": {
         "php": "^7.2",
-        "guzzlehttp/psr7": "~1.4.2",
+        "guzzlehttp/psr7": "^2.3",
         "neomerx/json-api": "4.0.1",
         "spomky-labs/otphp": "^8.3.3",
         "tuupola/cors-middleware": "1.2.1",
@@ -56,6 +55,7 @@
         "symfony/process": "^5.4",
         "jumbojett/openid-connect-php": "^0.9.2",
         "league/oauth2-server": "^8.3",
-        "willdurand/negotiation": "^3.1"
+        "willdurand/negotiation": "^3.1",
+        "monolog/monolog": "^2.8"
     }
 }
