--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -213,18 +213,17 @@ packaging:
     - if: $CI_COMMIT_TAG
   before_script:
     - echo GE_JOB_ID=$CI_JOB_ID >> .packaging.env
-    - echo STUDIP_VERSION=${CI_COMMIT_TAG#v} >> .packaging.env
     - mkdir .pkg
   script:
     - echo 'Running packaging job'
     - make build clean-npm
-    - zip -r9 .pkg/studip-${STUDIP_VERSION}.zip *
-    - tar -czf .pkg/studip-${STUDIP_VERSION}.tar.gz *
+    - zip -r9 .pkg/studip-$CI_COMMIT_TAG.zip *
+    - tar -czf .pkg/studip-$CI_COMMIT_TAG.tar.gz *
   artifacts:
     name: 'Stud.IP-Release-$CI_COMMIT_TAG'
     paths:
-      - ".pkg/studip-${STUDIP_VERSION}.zip"
-      - ".pkg/studip-${STUDIP_VERSION}.tar.gz"
+      - .pkg/studip-$CI_COMMIT_TAG.zip
+      - .pkg/studip-$CI_COMMIT_TAG.tar.gz
     reports:
       dotenv: .packaging.env
     expire_in: never
@@ -241,14 +240,14 @@ release:
     - job: packaging
       artifacts: true
   release:
-    name: "v${STUDIP_VERSION}"
+    name: "v$CI_COMMIT_TAG"
     description: "https://gitlab.studip.de/studip/studip/-/blob/${CI_COMMIT_TAG}/ChangeLog"
     tag_name: "$CI_COMMIT_TAG"
     assets:
       links:
-        - name: "studip-${STUDIP_VERSION}.zip"
-          url: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${GE_JOB_ID}/artifacts/.pkg/studip-${STUDIP_VERSION}.zip"
+        - name: "studip-$CI_COMMIT_TAG.zip"
+          url: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${GE_JOB_ID}/artifacts/.pkg/studip-$CI_COMMIT_TAG.zip"
           link_type: package
-        - name: "studip-${STUDIP_VERSION}.tar.gz"
-          url: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${GE_JOB_ID}/artifacts/.pkg/studip-${STUDIP_VERSION}.tar.gz"
+        - name: "studip-$CI_COMMIT_TAG.tar.gz"
+          url: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/jobs/${GE_JOB_ID}/artifacts/.pkg/studip-$CI_COMMIT_TAG.tar.gz"
           link_type: package
