--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "codeception/codeception": "^4.2",
         "codeception/module-asserts": "^1.3",
         "overtrue/phplint": "^3.0",
-        "phpstan/phpstan": "^1.8"
+        "phpstan/phpstan": "^1.8",
+        "symfony/var-dumper": "^5.4"
     },
     "require": {
         "php": "^7.2",
