--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,18 @@
         "jumbojett/openid-connect-php": "^0.9.2",
         "league/oauth2-server": "^8.3",
         "willdurand/negotiation": "^3.1",
-        "monolog/monolog": "^2.8"
+        "monolog/monolog": "^2.8",
+        "symfony/polyfill-php73": "^1.27",
+        "symfony/polyfill-php74": "^1.27",
+        "symfony/polyfill-php80": "^1.27"
+    },
+    "replace": {
+        "symfony/polyfill-php54": "*",
+        "symfony/polyfill-php55": "*",
+        "symfony/polyfill-php56": "*",
+        "symfony/polyfill-php70": "*",
+        "symfony/polyfill-php71": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-mbstring": "*"
     }
 }
