--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
         "monolog/monolog": "^2.8",
         "symfony/polyfill-php73": "^1.27",
         "symfony/polyfill-php74": "^1.27",
-        "symfony/polyfill-php80": "^1.27"
+        "symfony/polyfill-php80": "^1.27",
+        "symfony/polyfill-php81": "^1.27"
     },
     "replace": {
         "symfony/polyfill-php54": "*",
