--- a/config/.htaccess.dist
+++ b/config/.htaccess.dist
@@ -1,8 +1,8 @@
 #für rewrite wird die Option FollowSymLinks oder SymLinksIfOwnerMatch benötigt ...
 #Options SymLinksIfOwnerMatch
 #RewriteEngine on
-#RewriteRule ^download/(normal|force_download|zip)/([0-467])/([^/]+)/(.+)$ sendfile.php?$1=1&type=$2&file_id=$3&file_name=$4 [L]
-#RewriteRule ^download/(normal|force_download|zip)/5/([^/]+)/([^/]+)/(.+)$ sendfile.php?$1=1&type=5&range_id=$2&list_id=$3&file_name=$4 [L]
+#RewriteRule ^download/(normal|force_download|zip)/([0-467])/([^/]+)/(.+)$ sendfile.php?$1=1&type=$2&file_id=$3&file_name=$4 [L,B]
+#RewriteRule ^download/(normal|force_download|zip)/5/([^/]+)/([^/]+)/(.+)$ sendfile.php?$1=1&type=5&range_id=$2&list_id=$3&file_name=$4 [L,B]
 
 #Apache 2.2
 #Order Allow,Deny
