--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "guzzlehttp/psr7": "^2.3",
         "neomerx/json-api": "4.0.1",
         "spomky-labs/otphp": "^8.3.3",
-        "tuupola/cors-middleware": "1.2.1",
+        "tuupola/cors-middleware": "^1.2.1",
         "tecnickcom/tcpdf": "^6.3",
         "scssphp/scssphp": "^1.4",
         "symfony/yaml": "^5.0",
