--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         "slim/psr7": "1.4",
         "slim/slim": "^4.7.1",
         "php-di/php-di": "6.3.4",
-        "symfony/console": "~5.3.16",
+        "symfony/console": "^5.3.16",
         "symfony/process": "^5.4",
         "jumbojett/openid-connect-php": "^0.9.2",
         "league/oauth2-server": "^8.3",
