--- a/package.json
+++ b/package.json
@@ -57,6 +57,10 @@
         "@fullcalendar/resource-timeline": "^4.3.0",
         "@fullcalendar/timegrid": "^4.3.0",
         "@popperjs/core": "^2.11.2",
+        "@types/jquery": "^3.5.16",
+        "@types/jqueryui": "^1.12.16",
+        "@types/lodash": "^4.14.191",
+        "@vue/eslint-config-typescript": "^11.0.2",
         "autoprefixer": "^10.2.5",
         "axios": "^0.21.0",
         "babel-loader": "^8.2.1",
@@ -71,7 +75,7 @@
         "easygettext": "^2.17.0",
         "es6-promise": "4.2.8",
         "eslint": "^7.32.0",
-        "eslint-plugin-vue": "7.7.0",
+        "eslint-plugin-vue": "^9.10.0",
         "eslint-webpack-plugin": "^3.1.1",
         "expose-loader": "1.0.1",
         "favico.js": "0.3.10",
@@ -110,6 +114,8 @@
         "style-loader": "^2.0.0",
         "svgo": "^2.3.1",
         "tablesorter": "2.31.3",
+        "ts-loader": "^9.4.2",
+        "typescript": "^5.0.2",
         "vrp-vue-resizable": "1.2.7",
         "vue": "^2.6.12",
         "vue-gettext": "^2.1.12",
