Add image builder via kaniko, fixes #2610
Closes #2610

Merge request studip/studip!1760

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -263,6 +263,16 @@ packaging:
       dotenv: .packaging.env
     expire_in: never
 
+build_image:
+  image: 
+    name: gcr.io/kaniko-project/executor:debug
+    entrypoint: [""]
+  stage: build
+  variables:
+    IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
+  script:
+    - /kaniko/executor --context=dir://${CI_PROJECT_DIR} --dockerfile ${CI_PROJECT_DIR}/docker/studip/Dockerfile --destination ${IMAGE_TAG} --cache=true
+
 release:
   stage: release
   image: studip/release-cli
