--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -268,6 +268,7 @@ build_image:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
   stage: build
+  when: manual
   variables:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
   script:
