--- a/package.json
+++ b/package.json
@@ -1,160 +1,164 @@
 {
-    "name": "@studip/core",
-    "version": "5.4.0",
-    "description": "Stud.IP",
-    "private": true,
-    "scripts": {
-        "webpack-dev": "webpack --config webpack.dev.js --mode development",
-        "webpack-prod": "webpack --config webpack.prod.js --mode production",
-        "webpack-watch": "webpack --config webpack.dev.js --mode development --watch"
-    },
-    "author": "",
-    "license": "GPL-2.0",
-    "repository": {
-        "type": "svn",
-        "url": "https://develop.studip.de/svn/studip"
-    },
-    "engines": {
-        "node": ">=14"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.17.9",
-        "@babel/eslint-parser": "^7.17.0",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-transform-runtime": "^7.12.1",
-        "@babel/preset-env": "^7.12.1",
-        "@babel/register": "^7.12.1",
-        "@ckeditor/ckeditor5-alignment": "34.2.0",
-        "@ckeditor/ckeditor5-autoformat": "34.2.0",
-        "@ckeditor/ckeditor5-basic-styles": "34.2.0",
-        "@ckeditor/ckeditor5-build-classic": "34.2.0",
-        "@ckeditor/ckeditor5-build-decoupled-document": "34.2.0",
-        "@ckeditor/ckeditor5-build-inline": "34.2.0",
-        "@ckeditor/ckeditor5-code-block": "34.2.0",
-        "@ckeditor/ckeditor5-dev-utils": "^30.5.0",
-        "@ckeditor/ckeditor5-dev-webpack-plugin": "^30.5.0",
-        "@ckeditor/ckeditor5-essentials": "34.2.0",
-        "@ckeditor/ckeditor5-find-and-replace": "34.2.0",
-        "@ckeditor/ckeditor5-font": "34.2.0",
-        "@ckeditor/ckeditor5-horizontal-line": "34.2.0",
-        "@ckeditor/ckeditor5-html-support": "34.2.0",
-        "@ckeditor/ckeditor5-indent": "34.2.0",
-        "@ckeditor/ckeditor5-paragraph": "34.2.0",
-        "@ckeditor/ckeditor5-remove-format": "34.2.0",
-        "@ckeditor/ckeditor5-source-editing": "34.2.0",
-        "@ckeditor/ckeditor5-special-characters": "34.2.0",
-        "@ckeditor/ckeditor5-table": "34.2.0",
-        "@ckeditor/ckeditor5-theme-lark": "34.2.0",
-        "@ckeditor/ckeditor5-typing": "34.2.0",
-        "@ckeditor/ckeditor5-upload": "34.2.0",
-        "@ckeditor/ckeditor5-vue2": "^3.0.1",
-        "@elan-ev/reststate-vuex": "~1.0.5",
-        "@fullcalendar/core": "^4.3.1",
-        "@fullcalendar/daygrid": "^4.3.0",
-        "@fullcalendar/interaction": "^4.3.0",
-        "@fullcalendar/resource-common": "^4.3.1",
-        "@fullcalendar/resource-timegrid": "^4.3.0",
-        "@fullcalendar/resource-timeline": "^4.3.0",
-        "@fullcalendar/timegrid": "^4.3.0",
-        "@popperjs/core": "^2.11.2",
-        "@types/jquery": "^3.5.16",
-        "@types/jqueryui": "^1.12.16",
-        "@types/lodash": "^4.14.191",
-        "@vue/eslint-config-typescript": "^11.0.2",
-        "autoprefixer": "^10.2.5",
-        "axios": "^0.21.0",
-        "babel-loader": "^8.2.1",
-        "blueimp-file-upload": "10.31.0",
-        "buffer": "^6.0.3",
-        "chart.js": "^2.9.4",
-        "chartist": "0.11.4",
-        "ckeditor5-math": "34.1.1",
-        "cropperjs": "1.5.9",
-        "css-loader": "^5.0.1",
-        "css-minimizer-webpack-plugin": "^1.1.5",
-        "easygettext": "^2.17.0",
-        "es6-promise": "4.2.8",
-        "eslint": "^7.32.0",
-        "eslint-plugin-vue": "^9.10.0",
-        "eslint-webpack-plugin": "^3.1.1",
-        "expose-loader": "1.0.1",
-        "favico.js": "0.3.10",
-        "file-saver": "^2.0.5",
-        "focus-trap-vue": "^1.1.1",
-        "highlight.js": "10.5.0",
-        "jquery": "3.5.1",
-        "jquery-nestable": "0.8.0",
-        "jquery-ui": "1.13",
-        "jquery-ui-timepicker-addon": "1.6.3",
-        "jquery-ui-touch-punch": "0.2.3",
-        "jquery.qrcode": "^1.0.3",
-        "jquery.scrollto": "2.1.2",
-        "jspdf": "^2.5.1",
-        "jszip": "^3.6.0",
-        "less": "^3.12.2",
-        "less-loader": "7.1.0",
-        "lodash": "4.17.20",
-        "md5": "^2.3.0",
-        "mini-css-extract-plugin": "1.3.1",
-        "mitt": "2.1.0",
-        "multiselect": "0.9.12",
-        "pdfjs-dist": "^2.6.347",
-        "portal-vue": "^2.1.7",
-        "postcss": "^8.1.8",
-        "postcss-less": "^6.0.0",
-        "postcss-loader": "4.1.0",
-        "postcss-scss": "^4.0.4",
-        "raw-loader": "^4.0.2",
-        "sanitize-html": "^2.7.0",
-        "sass": "^1.29.0",
-        "sass-loader": "^10.1.0",
-        "select2": "4.0.13",
-        "sprintf-js": "^1.0.3",
-        "stream-browserify": "^3.0.0",
-        "style-loader": "^2.0.0",
-        "svgo": "^2.3.1",
-        "tablesorter": "2.31.3",
-        "ts-loader": "^9.4.2",
-        "typescript": "^5.0.2",
-        "vrp-vue-resizable": "1.2.7",
-        "vue": "^2.6.12",
-        "vue-gettext": "^2.1.12",
-        "vue-loader": "^15.9.8",
-        "vue-router": "^3.5.1",
-        "vue-select": "^3.11.2",
-        "vue-template-babel-compiler": "^1.2.0",
-        "vue-template-compiler": "^2.6.12",
-        "vue-twentytwenty": "^0.10.1",
-        "vue-typer": "^1.2.0",
-        "vuedraggable": "^2.24.3",
-        "vuex": "^3.6.2",
-        "webpack": "^5.70.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-merge": "5.4.0",
-        "webpack-notifier": "^1.15.0"
-    },
-    "babel": {
-        "presets": [
-            [
-                "@babel/preset-env"
-            ]
-        ],
-        "plugins": [
-            "@babel/plugin-syntax-dynamic-import",
-            "@babel/plugin-transform-runtime"
-        ]
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not IE <= 11"
+  "name": "@studip/core",
+  "version": "5.4.0",
+  "description": "Stud.IP",
+  "private": true,
+  "scripts": {
+    "webpack-dev": "webpack --config webpack.dev.js --mode development",
+    "webpack-prod": "webpack --config webpack.prod.js --mode production",
+    "webpack-watch": "webpack --config webpack.dev.js --mode development --watch",
+    "test": "jest tests/jest/"
+  },
+  "author": "",
+  "license": "GPL-2.0",
+  "repository": {
+    "type": "svn",
+    "url": "https://develop.studip.de/svn/studip"
+  },
+  "engines": {
+    "node": ">=14"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/register": "^7.12.1",
+    "@ckeditor/ckeditor5-alignment": "34.2.0",
+    "@ckeditor/ckeditor5-autoformat": "34.2.0",
+    "@ckeditor/ckeditor5-basic-styles": "34.2.0",
+    "@ckeditor/ckeditor5-build-classic": "34.2.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "34.2.0",
+    "@ckeditor/ckeditor5-build-inline": "34.2.0",
+    "@ckeditor/ckeditor5-code-block": "34.2.0",
+    "@ckeditor/ckeditor5-dev-utils": "^30.5.0",
+    "@ckeditor/ckeditor5-dev-webpack-plugin": "^30.5.0",
+    "@ckeditor/ckeditor5-essentials": "34.2.0",
+    "@ckeditor/ckeditor5-find-and-replace": "34.2.0",
+    "@ckeditor/ckeditor5-font": "34.2.0",
+    "@ckeditor/ckeditor5-horizontal-line": "34.2.0",
+    "@ckeditor/ckeditor5-html-support": "34.2.0",
+    "@ckeditor/ckeditor5-indent": "34.2.0",
+    "@ckeditor/ckeditor5-paragraph": "34.2.0",
+    "@ckeditor/ckeditor5-remove-format": "34.2.0",
+    "@ckeditor/ckeditor5-source-editing": "34.2.0",
+    "@ckeditor/ckeditor5-special-characters": "34.2.0",
+    "@ckeditor/ckeditor5-table": "34.2.0",
+    "@ckeditor/ckeditor5-theme-lark": "34.2.0",
+    "@ckeditor/ckeditor5-typing": "34.2.0",
+    "@ckeditor/ckeditor5-upload": "34.2.0",
+    "@ckeditor/ckeditor5-vue2": "^3.0.1",
+    "@elan-ev/reststate-vuex": "~1.0.5",
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/resource-common": "^4.3.1",
+    "@fullcalendar/resource-timegrid": "^4.3.0",
+    "@fullcalendar/resource-timeline": "^4.3.0",
+    "@fullcalendar/timegrid": "^4.3.0",
+    "@popperjs/core": "^2.11.2",
+    "@types/jquery": "^3.5.16",
+    "@types/jqueryui": "^1.12.16",
+    "@types/lodash": "^4.14.191",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "autoprefixer": "^10.2.5",
+    "axios": "^0.21.0",
+    "babel-loader": "^8.2.1",
+    "blueimp-file-upload": "10.31.0",
+    "buffer": "^6.0.3",
+    "chart.js": "^2.9.4",
+    "chartist": "0.11.4",
+    "ckeditor5-math": "34.1.1",
+    "cropperjs": "1.5.9",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "easygettext": "^2.17.0",
+    "es6-promise": "4.2.8",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^9.10.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "expose-loader": "1.0.1",
+    "favico.js": "0.3.10",
+    "file-saver": "^2.0.5",
+    "focus-trap-vue": "^1.1.1",
+    "highlight.js": "10.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-junit": "^16.0.0",
+    "jquery": "3.5.1",
+    "jquery-nestable": "0.8.0",
+    "jquery-ui": "1.13",
+    "jquery-ui-timepicker-addon": "1.6.3",
+    "jquery-ui-touch-punch": "0.2.3",
+    "jquery.qrcode": "^1.0.3",
+    "jquery.scrollto": "2.1.2",
+    "jspdf": "^2.5.1",
+    "jszip": "^3.6.0",
+    "less": "^3.12.2",
+    "less-loader": "7.1.0",
+    "lodash": "4.17.20",
+    "md5": "^2.3.0",
+    "mini-css-extract-plugin": "1.3.1",
+    "mitt": "2.1.0",
+    "multiselect": "0.9.12",
+    "pdfjs-dist": "^2.6.347",
+    "portal-vue": "^2.1.7",
+    "postcss": "^8.1.8",
+    "postcss-less": "^6.0.0",
+    "postcss-loader": "4.1.0",
+    "postcss-scss": "^4.0.4",
+    "raw-loader": "^4.0.2",
+    "sanitize-html": "^2.7.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "select2": "4.0.13",
+    "sprintf-js": "^1.0.3",
+    "stream-browserify": "^3.0.0",
+    "style-loader": "^2.0.0",
+    "svgo": "^2.3.1",
+    "tablesorter": "2.31.3",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.2",
+    "vrp-vue-resizable": "1.2.7",
+    "vue": "^2.6.12",
+    "vue-gettext": "^2.1.12",
+    "vue-loader": "^15.9.8",
+    "vue-router": "^3.5.1",
+    "vue-select": "^3.11.2",
+    "vue-template-babel-compiler": "^1.2.0",
+    "vue-template-compiler": "^2.6.12",
+    "vue-twentytwenty": "^0.10.1",
+    "vue-typer": "^1.2.0",
+    "vuedraggable": "^2.24.3",
+    "vuex": "^3.6.2",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-merge": "5.4.0",
+    "webpack-notifier": "^1.15.0"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env"
+      ]
     ],
-    "prettier": {
-        "printWidth": 120,
-        "singleQuote": true,
-        "tabWidth": 4
-    },
-    "eslint-junit": {
-        "output": "./.reports/eslint-report.xml"
-    }
+    "plugins": [
+      "@babel/plugin-syntax-dynamic-import",
+      "@babel/plugin-transform-runtime"
+    ]
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not IE <= 11"
+  ],
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true,
+    "tabWidth": 4
+  },
+  "eslint-junit": {
+    "output": "./.reports/eslint-report.xml"
+  }
 }
