update npm in job, fixes #2666
Closes #2666

Merge request studip/studip!1811

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,6 +123,7 @@ lint-js:
   interruptible: true
   before_script:
     - *mkdir-reports
+    - npm install -g npm@7
     - npm install
       --no-save --no-audit --no-fund
       --loglevel=error
