--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "node": ">=16"
     },
     "devDependencies": {
+        "@axe-core/playwright": "^4.6.1",
         "@babel/core": "^7.17.9",
         "@babel/eslint-parser": "^7.17.0",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -57,6 +58,7 @@
         "@fullcalendar/resource-timegrid": "^4.3.0",
         "@fullcalendar/resource-timeline": "^4.3.0",
         "@fullcalendar/timegrid": "^4.3.0",
+        "@playwright/test": "^1.33.0",
         "@popperjs/core": "^2.11.2",
         "@types/jquery": "^3.5.16",
         "@types/jqueryui": "^1.12.16",
@@ -73,6 +75,7 @@
         "cropperjs": "1.5.9",
         "css-loader": "^5.0.1",
         "css-minimizer-webpack-plugin": "^1.1.5",
+        "dotenv": "^16.0.3",
         "easygettext": "^2.17.0",
         "es6-promise": "4.2.8",
         "eslint": "^7.32.0",
