--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
         "symfony/polyfill-php74": "^1.27",
         "symfony/polyfill-php80": "^1.27",
         "symfony/polyfill-php81": "^1.27",
-        "phpowermove/docblock": "^2.0"
+        "phpowermove/docblock": "^2.0",
+        "ksubileau/color-thief-php": "^2.0"
     },
     "replace": {
         "symfony/polyfill-php54": "*",
