--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "@fullcalendar/resource-timeline": "^4.3.0",
         "@fullcalendar/timegrid": "^4.3.0",
         "@playwright/test": "^1.33.0",
+        "@johmun/vue-tags-input": "^2.1.0",
         "@popperjs/core": "^2.11.2",
         "@types/jquery": "^3.5.16",
         "@types/jqueryui": "^1.12.16",
@@ -72,6 +73,7 @@
         "chart.js": "^2.9.4",
         "chartist": "0.11.4",
         "ckeditor5-math": "34.1.1",
+        "colorpare": "^2.2.0",
         "cropperjs": "1.5.9",
         "css-loader": "^5.0.1",
         "css-minimizer-webpack-plugin": "^1.1.5",
